--- a/src/UI/components/News/News.module.css
+++ b/src/UI/components/News/News.module.css
@@ -1,12 +1,20 @@
-.news{
+.news {
   margin: 0 auto 60px auto;
   text-align: center;
   max-width: 800px;
   width: 100%;
 }
-.title{
+
+.title {
   text-align: center;
 }
-.text{
+
+.text {
   font-size: 18px;
+}
+
+.date {
+  display: block;
+  margin-left: 30px;
+  text-align: left;
 }
